providers/linear/tests/snapshots/issue-read__00-lookup-pntr-1.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: replayed
---
## step 0: lookup /teams/PNTR/issues/open :: PNTR-1
entry: PNTR-1 dir
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
